apps/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: excalidraw
  name: excalidraw
  namespace: excalidraw
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: excalidraw
status:
  loadBalancer: {}
