apps/excalidraw/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw 
  namespace: excalidraw
spec:
  parentRefs:
  - name: gateway
    namespace: nginx
  hostnames:
  - "excalidraw.homelab.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: excalidraw
      port: 80
